fix(core): remove spacing from box-placeholder width (#749)
* fix(core): remove spacing from box-placeholder width

* fix(core): remove calc

---------

--- a/core/src/components/cat-checkbox/cat-checkbox.scss
+++ b/core/src/components/cat-checkbox/cat-checkbox.scss
@@ -47,7 +47,7 @@ input {
 }
 
 .box-placeholder {
-  width: calc($checkbox-width + 2px);
+  width: $checkbox-width;
   flex-shrink: 0;
 }
 
